fixed spacing in portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,7 +128,7 @@ form {
     margin-right: 30px;
 }
 .portImg {
-    width: 200px;
+    width: 150px;
     position: relative;
     z-index: 1;
     display: inline-block;
@@ -137,12 +137,12 @@ form {
 h6 {
     background: #4aaaa5;
     color: #ffffff;
-    width: 200px;
+    width: 150px;
     height: 40px;
     margin: 0 auto;
     position: absolute;
     z-index: 2;
     text-align: center;
-    bottom: 30px;
-    font-size: 20px;
+    bottom: 25px;
+    font-size: 18px;
 }
